<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="about_text">Привіт! 🌻\n\nHi, I\'m Roma! I\'m currently living in Ukraine, which I absolutely love! I\'ve been crazy about board games for more than 10 years! The idea for this app came to me when I was playing Star Realms (which has terrible tokens, right?). I\'m working on this app in my spare time.\n\nEvery review, email, or donation from you makes me a little happier. Despite the terrible events in my country, I decided to keep this app free and not add ads.\n\nThank you so much, and I wish you joyful games!</string>
    <string name="about_translators" translatable="false">\ud83c\uddf7\ud83c\uddf4 Andrei Iacob\n\ud83c\uddf5\ud83c\uddf1 Osmine Retro, maiky\n\ud83c\uddea\ud83c\uddf8 ZVirus, rbergara\n\ud83c\uddeb\ud83c\uddf7 Jumar\n\ud83c\uddf5\ud83c\uddf9 Gustavo Araújo\n\ud83c\udde8\ud83c\uddff Adam Novák\n\ud83c\uddf3\ud83c\uddf1 Link Hogthrob (JvD NL)\n\ud83c\udde9\ud83c\uddea Link Hogthrob (JvD NL)\n\ud83c\uddee\ud83c\uddf9 Silvia Avvertenza\n\ud83c\uddf9\ud83c\uddf7 İpek Demir\n\ud83c\udded\ud83c\uddfa PiEm14B\n\ud83c\uddf8\ud83c\uddea Tarek Auf der Strasse\n\ud83c\uddfb\ud83c\uddf3 Thien Loc, Hiep Tran\n\ud83c\udde7\ud83c\uddec Godlev\n\ud83c\uddec\ud83c\uddf7 Giannis Ioannidis\n\ud83c\udded\ud83c\uddf7 Antonio\n\ud83c\udde8\ud83c\uddf3 Maurice Wang</string>
    <string name="about_translators_title">Awesome translators</string>
    <string name="action_donate">Buy Developer a Coffee</string>
    <string name="action_save">Save</string>
    <string name="app_name">Score Counter</string>
    <string name="common_back">Back</string>
    <string name="common_continue">Continue</string>
    <string name="common_counters">Counters</string>
    <string name="common_decrease">Decrease</string>
    <string name="common_dice">Dice</string>
    <string name="common_edit">Edit</string>
    <string name="common_increase">Increase</string>
    <string name="common_more">More</string>
    <string name="common_set">Set value</string>
    <string name="common_settings">Settings</string>
    <string name="common_vibrate">Vibrate on tap</string>
    <string name="counter_added">Counter added</string>
    <string name="counter_default_name">Counter</string>
    <string name="counter_deleted">Counter deleted</string>
    <string name="counter_details_default_value">Reset value</string>
    <string name="counter_details_name">Counter name</string>
    <string name="counter_details_step">Increment</string>
    <string name="counter_details_value">Value</string>
    <string name="counters_empty_message">To add a new counter, tap&#160;the&#160;<b>+</b>&#160;icon</string>
    <string name="delete">Delete</string>
    <string name="dialog_confirmation_question">Oh, you\'re sure about that?</string>
    <string name="dialog_elektu_confirm">A small browser page will pop up to help you choose someone from a group.\n\nCreated by Julien&#160;Bellue</string>
    <string name="dialog_no">No</string>
    <string name="dialog_predefined_steps">You can tweak these settings in the Settings screen.</string>
    <string name="dialog_support_me_content">Hi, I\'m Roma. I\'m based in Ukraine and I\'m working on this app in my spare time.\n\nDespite the terrible events in my country, I\'ve decided to keep this app ad-free. If you\'d like to support me, please consider donating.\n\nThanks, and I hope you have some great game nights ahead!</string>
    <string name="dialog_support_me_remind_me_later">Later</string>
    <string name="dialog_yes">Yes</string>
    <string name="dice_empty_state">To roll the dice, just tap anywhere on the screen</string>
    <string name="dice_roll_prefix">Roll(s):</string>
    <string name="dice_sides">Custom dice sides</string>
    <string name="dice_sum_prefix">Sum:</string>
    <string name="donation_title">Help keep the app ad-free!</string>
    <string name="easter_wave" translatable="false">\ud83d\udc4b Hi, I\'m Roma too!</string>
    <string name="history_empty_message">You can check out the changes that were made here</string>
    <string name="history_subtitle">cleared after restart of the app \u26a0\ufe0f</string>
    <string name="menu_add_new_counter">Add counter</string>
    <string name="menu_delete_all_counters">Delete all counters</string>
    <string name="menu_elektu">Who goes first?</string>
    <string name="menu_history">History</string>
    <string name="menu_reset_all_counters">Reset all counters</string>
    <string name="message_app_not_found">It seems there isn\'t an app that can handle this action.</string>
    <string name="message_error_generic">It looks like there\'s been a technical issue.</string>
    <string name="message_lowest_wins">Changed leader counter logic</string>
    <string name="message_one_more_counter">One more</string>
    <string name="message_thank_you">Thanks for your support! \u2665\ufe0e</string>
    <string name="message_you_can_use_long_press">Try a long tap on +/- side</string>
    <string name="setting_help_translate">Help me translate the app</string>
    <string name="setting_share">Share Android App</string>
    <string name="settings_about">About App</string>
    <string name="settings_animate_roll">Dice roll animation</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_change_language">Language</string>
    <string name="settings_counter_title">Counter (long press)</string>
    <string name="settings_feedback">Contact Developer</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_rate_app">Rate this app</string>
    <string name="settings_shake_to_roll">Shake to roll the dice</string>
    <string name="settings_sound">Play sound</string>
    <string name="settings_stay_awake">Keep screen awake</string>
    <string name="settings_switch_tap_logic">Swap short and long press</string>
    <string name="share_snippet">No need to look for a pen and paper. Get the free Android app</string>
    <string name="simple_edit_value_hint">Enter value</string>
    <string name="settings_help_remote" translatable="false">Remote Control Help</string>
    <string name="about_remote_mapping_header" translatable="false" >Remote Contols</string>
    <string name="about_remote_mapping" translatable="false" >
1. Each Bluetooth Remote Shutter buttons(2) controls 1 counter each.\n
2. Press Button 1 to add points to the 1st counter.\n
3. Press Button 2 to add points to the 2nd counter.\n
4. Double-click Button 1 to subtract 1 point from the 1st counter.\n
5. Double-click Button 2 to subtract 1 point from the 2nd counter.\n
6. Press and hold either Button 1 or 2 to reset all scores.\n
    </string>
    <string name="about_remote_costing" translatable="false" >
        General Cost : 2$-3$ USD or 150₹-200₹
    </string>
    <string name="about_remote_need_more_help" translatable="false" >
        Need more help or\nIssues with remote ?
    </string>
    <string name="about_remote_where_to_buy" translatable="false" >
        Where to buy?
    </string>
    <string name="about_remote_support_me" translatable="false">Support Dev ReTweak</string>

</resources>
